@@ -1044,6 +1044,7 @@ Charles Waldman
 Richard Walker
 Larry Wall
 Kevin Walzer
+Ke Wang
 Greg Ward
 Zachary Ware
 Barry Warsaw
